    AOS_Line_Item_Groups/language/nl_nl.lang.php
    AOS_PDF_Templates/language/nl_nl.lang.php
    AOS_Product_Categories/language/
    AOS_Products/language/nl_nl.lang.php
    AOS_Products_Quotes/language/nl_nl.lang.php
    AOS_Quotes/language/nl_nl.lang.php
    AOW_Actions/language/
    AOW_Conditions/language/
    AOW_Processed/language/
    AOW_WorkFlow/language/
    Calls_Reschedule/languages
    Delegates/languages
    FP_Event_Locations/language
    FP_Event/language
    iCals/language
    jjwg_Address_Cache/language
    jjwg_Areas/language
    jjwg_Maps/language
    jjwg_Markers/language
    SecurityGroups/language
    vCals/language
    AOD_IndexEvent
Marked following directories as obsolate:    
    Dashboard_obsolate
    EditCustomFields_obsolate
    Feeds_obsolate
    iFrames_obsolate
    modules/Activities/language/l_NL.help.index.html obsolate
    modules/Bugs/language/set of html files obsolate
    modules/Calendar/language/ contains html files
    modules/Calls/language/ contains various html files
Diff modules/Activities/language/nl_NL.lang.php no changes bottom file order not similar
To translate modules/Administration/nl_NL.lang.php this is 1100 lines of translation work
Translated modules/AOD_Index
SuiteCRM File modules/AOS_Contracts/language/nl_nl.lang.php
SuiteCRM File modules/AOS_Invoices/language/nl_nl.lang.php
SuiteCRM File modules/AOS_Line_Groups/language/nl_nl.lang.php
SuiteCRM File modules/AOS_PDF_Templates/language/nl_nl.lang.php
SuiteCRM File modules/AOS_Products/language/nl_nl.lang.php
SuiteCRM File modules/AOS_Products_Quotes/language/nl_nl.lang.php
SuiteCRM File modules/AOS_Quotes/language/nl_nl.lang.php
Diff modules/Audit/language/nl_NL.lang.php no changes detected
Diff modules/Bugs/language/nl_NL.lang.php  minor changes detected
GitHub Commit Changes 20140401
Diff modules/Calendar/language/nl_NL.lang.php
  remark days and months different notation: '0' => 'Zo', versus in english "Sun",
Diff 


