@@ -1,0 +1,48 @@
+<?php
+if (!defined('sugarEntry') || !sugarEntry)
+  die('Not A Valid Entry Point');
+/**
+ * Copyright (c) 2014 Acniti (http:/www.acniti.com)
+ * All rights reserved.
+ *
+ * Permission is granted for use, copying, modification, distribution,
+ * and distribution of modified versions of this work as long as the
+ * above copyright notice is included.
+ */
+
+$mod_strings = array (
+  'LBL_ASSIGNED_TO_ID' => 'Toegewezen gebruiker:',
+  'LBL_ASSIGNED_TO_NAME' => 'Toegewezen aan:',
+  'LBL_ID' => 'ID',
+  'LBL_DATE_ENTERED' => 'Ingevoerd:',
+  'LBL_DATE_MODIFIED' => 'Laatste wijziging:',
+  'LBL_MODIFIED' => 'Gewijzigd door:',
+  'LBL_MODIFIED_ID' => 'Gewijzigd door Id:',
+  'LBL_MODIFIED_NAME' => 'Gewijzigd door naam',
+  'LBL_CREATED' => 'Gemaakt door',
+  'LBL_CREATED_ID' => 'Gemaakt door id',
+  'LBL_DESCRIPTION' => 'Beschrijving',
+  'LBL_DELETED' => 'Verwijderd',
+  'LBL_NAME' => 'Naam',
+  'LBL_CREATED_USER' => 'Gemaakt door gebruiker',
+  'LBL_MODIFIED_USER' => 'Gewijzigd door gebruiker',
+  'LBL_LIST_NAME' => 'Naam',
+  'LBL_EDIT_BUTTON' => 'Bewerk',
+  'LBL_REMOVE' => 'Verwijder',
+  'LBL_LIST_FORM_TITLE' => 'Opnieuw plannen lijst',
+  'LBL_MODULE_NAME' => 'Opnieuw plannen',
+  'LBL_MODULE_TITLE' => 'Opnieuw plannen',
+  'LBL_HOMEPAGE_TITLE' => 'Mijn nieuwe planning',
+  'LNK_NEW_RECORD' => 'Maak planning',
+  'LNK_LIST' => 'Overzicht planning',
+  'LNK_IMPORT_CALLS_RESCHEDUAL' => 'Importeer planning',
+  'LBL_SEARCH_FORM_TITLE' => 'Zoek planning',
+  'LBL_HISTORY_SUBPANEL_TITLE' => 'Overzicht geschiedenis',
+  'LBL_ACTIVITIES_SUBPANEL_TITLE' => 'Activiteiten',
+  'LBL_CALLS_RESCHEDUAL_SUBPANEL_TITLE' => 'planning',
+  'LBL_NEW_FORM_TITLE' => 'Nieuwe planning',
+  'LBL_REASON' => 'Reden',
+  'LBL_CALLS' => 'Telefoongesprekken',
+  'LNK_IMPORT_CALLS_RESCHEDULE' => 'Importeer Planning',
+  'LBL_CALLS_RESCHEDULE_SUBPANEL_TITLE' => 'Planning',
+);
